# tree-sitter-sql

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  index.html  index.js  package-lock.json  package.json  pyproject.toml  setup.py  test_proc_final.sql  test_ref.sql  test_semi.sql  test_simple.sql  test_tsql_select.sql  tree-sitter.json
.github/workflows/: ci.yml  create_release.yml  gh-pages.yml  merge.yml  notes.md  npm-publish.yml  publish.yml  release.yml  release_assets.yml  tag.yml
bindings/c/: tree-sitter-sql.h  tree-sitter-sql.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sql/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSqlTests/: TreeSitterSqlTests.swift
docs/: .gitignore
grammar/: column-lists.js  expressions.js  helpers.js  keywords.js  transactions.js  types.js
grammar/statements/: alter.js  comment.js  copy.js  create-function.js  create-procedure.js  create.js  delete.js  drop.js  index.js  insert.js  merge.js  optimize.js  refresh.js  rename.js  select.js  set.js  truncate.js  update.js
queries/: highlights.scm  structure.scm
queries/sql/: highlights.scm
scripts/: test-keywords.sh
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: alter.txt  casting.txt  comment.txt  comment_stat.txt  compound_statements.txt  create.txt  cte.txt  custom_types.txt  delete.txt  drop.txt  dynamic.txt  errors.txt  expressions.txt  functions.txt  group_by.txt  index.txt  insert.txt  jinja.txt  json.txt  literals.txt  merge.txt  optimize.txt  procedures.txt  refresh.txt  select.txt  set.txt  show.txt  subquery.txt  transaction.txt  unload.txt  update.txt  while.txt  window_functions.txt
test/highlight/: query.sql  union.sql
