[package]
name = "tree-sitter-sequel"
description = "sql grammar for the tree-sitter parsing library"
version = "0.3.5"
keywords = ["incremental", "parsing", "sql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/DerekStride/tree-sitter-sql"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "~1.2.1"

[dev-dependencies]
tree-sitter = "0.23"
